[gd_scene load_steps=9 format=3 uid="uid://by8vskalc5hle"]

[ext_resource type="Script" path="res://scenes/game/game.gd" id="1_2qkge"]
[ext_resource type="PackedScene" uid="uid://ctkur3lmc0d17" path="res://scenes/player/player.tscn" id="1_bw141"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v2n8e"]
size = Vector2(1280, 20)

[sub_resource type="CanvasTexture" id="CanvasTexture_mx1xf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6hedb"]
size = Vector2(720, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jcwsw"]
size = Vector2(1280.5, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tqlg1"]
size = Vector2(720, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w76sx"]
size = Vector2(1240, 7)

[node name="Game" type="Node2D"]
script = ExtResource("1_2qkge")

[node name="Walls" type="Node2D" parent="."]

[node name="Bottom" type="StaticBody2D" parent="Walls"]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Bottom"]
position = Vector2(640, 710)
shape = SubResource("RectangleShape2D_v2n8e")

[node name="Sprite2D" type="Sprite2D" parent="Walls/Bottom"]
modulate = Color(0.215686, 0.215686, 0.215686, 1)
position = Vector2(640, 710)
scale = Vector2(1280, 20)
texture = SubResource("CanvasTexture_mx1xf")

[node name="Right" type="StaticBody2D" parent="Walls"]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Right"]
position = Vector2(1270, 360)
rotation = 1.5708
shape = SubResource("RectangleShape2D_6hedb")

[node name="Sprite2D" type="Sprite2D" parent="Walls/Right"]
modulate = Color(0.215686, 0.215686, 0.215686, 1)
position = Vector2(1270, 360.012)
rotation = 1.5708
scale = Vector2(719.676, 20)
texture = SubResource("CanvasTexture_mx1xf")

[node name="Top" type="StaticBody2D" parent="Walls"]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Top"]
position = Vector2(640.25, 10)
shape = SubResource("RectangleShape2D_jcwsw")

[node name="Sprite2D" type="Sprite2D" parent="Walls/Top"]
modulate = Color(0.215686, 0.215686, 0.215686, 1)
position = Vector2(640, 10)
scale = Vector2(1280, 20)
texture = SubResource("CanvasTexture_mx1xf")

[node name="Left" type="StaticBody2D" parent="Walls"]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Left"]
position = Vector2(10, 360)
rotation = 1.5708
shape = SubResource("RectangleShape2D_tqlg1")

[node name="Sprite2D" type="Sprite2D" parent="Walls/Left"]
modulate = Color(0.215686, 0.215686, 0.215686, 1)
position = Vector2(10, 360)
rotation = 1.5708
scale = Vector2(719.676, 20)
texture = SubResource("CanvasTexture_mx1xf")

[node name="Player" parent="." instance=ExtResource("1_bw141")]
position = Vector2(643, 650)
scale = Vector2(50, 50)

[node name="BallSpawn" type="Marker2D" parent="."]
position = Vector2(642, 105)

[node name="PlayerSpawn" type="Marker2D" parent="."]
position = Vector2(643, 651)

[node name="GameOverWall" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameOverWall"]
position = Vector2(640, 696.5)
shape = SubResource("RectangleShape2D_w76sx")

[connection signal="need_reset" from="Player" to="." method="_on_player_need_reset"]
[connection signal="body_entered" from="GameOverWall" to="." method="_on_game_over_wall_body_entered"]
